--- a/notebooks/classification.ipynb
+++ b/notebooks/classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3d2d2fd2",
+   "id": "33e2d59d",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7cda6f5",
+   "id": "4eb0883b",
    "metadata": {},
    "source": [
     "# 0. Classification of Alzheimer's disease diagnosis\n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1110017",
+   "id": "d08012a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b8f3688",
+   "id": "90c586f3",
    "metadata": {},
    "source": [
     "## Database\n",
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55d2e4c3",
+   "id": "cf7a77c6",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f2f1b57",
+   "id": "59f5993c",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd1ded34",
+   "id": "d2bd0708",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1291041f",
+   "id": "c9db4003",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca70b36d",
+   "id": "96c373f1",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "336201f2",
+   "id": "60df8838",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2228b1c",
+   "id": "ec6fd062",
    "metadata": {},
    "source": [
     "## Preprocessing\n",
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "222acd5a",
+   "id": "4779f828",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ba6eac9",
+   "id": "2d8bf495",
    "metadata": {},
    "source": [
     "To facilitate the training and avoid overfitting due to the limited amount of\n",
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7857b615",
+   "id": "4dc4d8dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d64a92c2",
+   "id": "1138d135",
    "metadata": {},
    "source": [
     "## Visualization\n",
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a2950ec",
+   "id": "97e155b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e22ddf0",
+   "id": "853882ee",
    "metadata": {},
    "source": [
     "# 1. Cross-validation\n",
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "651d6767",
+   "id": "24ef3fe0",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8adc260b",
+   "id": "4812175e",
    "metadata": {},
    "source": [
     "# 2. Model\n",
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "770b11f9",
+   "id": "14abdfa0",
    "metadata": {},
    "source": [
     "## Reminder on CNN layers\n",
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1791ab7",
+   "id": "fcc2e6ce",
    "metadata": {},
    "source": [
     "### Feature maps\n",
@@ -492,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7801ecab",
+   "id": "ba2c6967",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47ae5141",
+   "id": "b645ba78",
    "metadata": {},
    "source": [
     "### Convolutions (`nn.Conv3d`)\n",
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b7fe245",
+   "id": "14a7c5c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "467fe6ee",
+   "id": "a6972763",
    "metadata": {},
    "source": [
     "### Batch Normalization (`nn.BatchNorm3d`)\n",
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91e646cf",
+   "id": "272f6d72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "153bf26a",
+   "id": "ccd38e36",
    "metadata": {},
    "source": [
     "### Activation function (`nn.LeakyReLU`)\n",
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8dc7e166",
+   "id": "5c178847",
    "metadata": {},
    "source": [
     "### Pooling function (`PadMaxPool3d`)\n",
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b6d781a",
+   "id": "9d6c9faf",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f44767b3",
+   "id": "1773cff1",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "537712c6",
+   "id": "6a68c46c",
    "metadata": {},
    "source": [
     "### Dropout (`nn.Dropout`) \n",
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac25d2d4",
+   "id": "0cba70de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "655238f4",
+   "id": "351dc807",
    "metadata": {},
    "source": [
     "### Fully-Connected Layers (`nn.Linear`)\n",
@@ -752,7 +752,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cef44c86",
+   "id": "bfa213d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,10 +764,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cc47c16",
+   "id": "d94fff06",
    "metadata": {},
    "source": [
-    "## TODO Network design\n",
+    "## Network design\n",
     "Construct here the network corresponding to the scheme and the following\n",
     "description:\n",
     "\n",
@@ -786,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85e50536",
+   "id": "7f27b209",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -797,46 +797,18 @@
     "    \n",
     "    def __init__(self):\n",
     "        super(CustomNetwork, self).__init__()\n",
-    "        self.convolutions = nn.Sequential(\n",
-    "            nn.Conv3d(1, 8, 3, padding=1),\n",
-    "            # Size 8@30x40x30\n",
-    "            nn.BatchNorm3d(8),\n",
-    "            nn.LeakyReLU(),\n",
-    "            PadMaxPool3d(2, 2),\n",
-    "            # Size 8@15x20x15\n",
-    "            \n",
-    "            nn.Conv3d(8, 16, 3, padding=1),\n",
-    "            # Size 16@15x20x15\n",
-    "            nn.BatchNorm3d(16),\n",
-    "            nn.LeakyReLU(),\n",
-    "            PadMaxPool3d(2, 2),\n",
-    "            # Size 16@8x10x8)\n",
-    "            \n",
-    "            nn.Conv3d(16, 32, 3, padding=1),\n",
-    "            # Size 32@8x10x8\n",
-    "            nn.BatchNorm3d(32),\n",
-    "            nn.LeakyReLU(),\n",
-    "            PadMaxPool3d(2, 2),\n",
-    "            # Size 32@4x5x4\n",
-    "            \n",
-    "        )\n",
-    "        \n",
-    "        self.linear = nn.Sequential(\n",
-    "            nn.Dropout(p=0.5),\n",
-    "            nn.Linear(32 * 4 * 5 * 4, 2)\n",
-    "            \n",
-    "        )\n",
+    "        # Create the layers composing the network.\n",
+    "        # TIP: you can use Sequential to avoid naming all the layers one by one.\n",
+    "        pass \n",
     "        \n",
     "    def forward(self, x):\n",
-    "        x = self.convolutions(x)\n",
-    "        x = x.view(x.size(0), -1)\n",
-    "        x = self.linear(x)\n",
-    "        return x"
+    "        # Compose the forward operation using the layers defined in __init__\n",
+    "        pass"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9347ba35",
+   "id": "3e7cda22",
    "metadata": {},
    "source": [
     "# 3. Train & Test\n",
@@ -863,8 +835,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0696010e",
-   "metadata": {},
+   "id": "b2850363",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
    "outputs": [],
    "source": [
     "def train(model, train_loader, criterion, optimizer, n_epochs):\n",
@@ -888,18 +862,7 @@
     "        model.train()\n",
     "        train_loader.dataset.train()\n",
     "        for i, data in enumerate(train_loader, 0):\n",
-    "            # Retrieve mini-batch and put data on GPU with .cuda()\n",
-    "            images, labels = data['image'].cuda(), data['label'].cuda()\n",
-    "            # Forward pass\n",
-    "            outputs = model(images)\n",
-    "            # Loss computation\n",
-    "            loss = criterion(outputs, labels)\n",
-    "            # Back-propagation (gradients computation)\n",
-    "            loss.backward()\n",
-    "            # Parameters update\n",
-    "            optimizer.step()\n",
-    "            # Erase previous gradients\n",
-    "            optimizer.zero_grad()\n",
+    "            # Complete the train iterarion\n",
     "\n",
     "        _, train_metrics = test(model, train_loader, criterion)\n",
     "\n",
@@ -980,13 +943,12 @@
     "        \n",
     "    metrics_dict['balanced_accuracy'] = (metrics_dict['sensitivity'] + metrics_dict['specificity']) / 2\n",
     "    \n",
-    "    return metrics_dict\n",
-    "\n"
+    "    return metrics_dict"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f536881e",
+   "id": "091eff70",
    "metadata": {},
    "source": [
     "## Train Classification with Left HC\n",
@@ -1010,7 +972,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c478c5a",
+   "id": "e6c0f165",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1021,7 +983,8 @@
     "valid_datasetLeftHC = MRIDataset(img_dir, valid_df, transform=transform)\n",
     "\n",
     "# Try different learning rates\n",
-    "learning_rate = 10**-4\n",
+    "# To complete\n",
+    "learning_rate = ... # Try different learning rates between 10**-5 and 10**-3\n",
     "n_epochs = 30\n",
     "batch_size = 4\n",
     "\n",
@@ -1043,7 +1006,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "210f8073",
+   "id": "26a31c85",
    "metadata": {},
    "source": [
     "If you obtained about 0.85 or more of balanced accuracy, there may be\n",
@@ -1063,7 +1026,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e70ec24",
+   "id": "0c5e5c61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1037,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d29380d",
+   "id": "3a2e55f9",
    "metadata": {},
    "source": [
     "If the accuracy on old participants is very different from the one you obtained before,\n",
@@ -1084,7 +1047,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c8eb2f7",
+   "id": "e1ef9b0f",
    "metadata": {},
    "source": [
     "## Train Classification with Right HC\n",
@@ -1098,7 +1061,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9da1735",
+   "id": "7ac49807",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1107,7 +1070,8 @@
     "train_datasetRightHC = MRIDataset(img_dir, train_df, transform=transform)\n",
     "valid_datasetRightHC = MRIDataset(img_dir, valid_df, transform=transform)\n",
     "\n",
-    "learning_rate = 10**-4\n",
+    "# To complete\n",
+    "learning_rate = ... # You can reuse the same learning rate as before\n",
     "n_epochs = 30\n",
     "batch_size = 4\n",
     "\n",
@@ -1128,7 +1092,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa8d7289",
+   "id": "16edc2d7",
    "metadata": {},
    "source": [
     "## Soft voting\n",
@@ -1139,23 +1103,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73559956",
+   "id": "5bdf80ae",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# To complete\n",
     "def softvoting(leftHC_df, rightHC_df):\n",
-    "    df1 = leftHC_df.set_index('participant_id', drop=True)\n",
-    "    df2 = rightHC_df.set_index('participant_id', drop=True)\n",
-    "    results_df = pd.DataFrame(index=df1.index.values,\n",
-    "                              columns=['true_label', 'predicted_label',\n",
-    "                                       'proba0', 'proba1'])\n",
-    "    results_df.true_label = df1.true_label\n",
-    "    # Compute predicted label and probabilities\n",
-    "    results_df.proba1 = 0.5 * df1.proba1 + 0.5 * df2.proba1\n",
-    "    results_df.proba0 = 0.5 * df1.proba0 + 0.5 * df2.proba0\n",
-    "    results_df.predicted_label = (0.5 * df1.proba1 + 0.5 * df2.proba1 > 0.5).astype(int)\n",
+    "    # To complete. Implement soft-voting with same weights on both hippocampi.\n",
     "\n",
-    "    return results_df\n",
     "\n",
     "valid_results = softvoting(valid_resultsLeftHC_df, valid_resultsRightHC_df)\n",
     "valid_metrics = compute_metrics(valid_results.true_label, valid_results.predicted_label)\n",
@@ -1164,7 +1119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2308e0ff",
+   "id": "33319896",
    "metadata": {},
    "source": [
     "Keep in mind that the validation set was used to set the hyperparameters\n",
@@ -1175,7 +1130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb4b0edc",
+   "id": "d5a2b39d",
    "metadata": {},
    "source": [
     "# 4. Clustering on AD & CN populations\n",
@@ -1191,7 +1146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bca3c12",
+   "id": "5501a1ba",
    "metadata": {},
    "source": [
     "## Model\n",
@@ -1208,7 +1163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df7565f7",
+   "id": "fe73669f",
    "metadata": {},
    "source": [
     "You will find below `CropMaxUnpool3d` the transposed version of\n",
@@ -1218,7 +1173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d7a18e6",
+   "id": "6b9621fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1240,7 +1195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea4e7744",
+   "id": "e59a5a77",
    "metadata": {},
    "source": [
     "To facilitate the reconstruction process, the pooling layers in the encoder\n",
@@ -1254,7 +1209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16005c63",
+   "id": "4d34a318",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1334,7 +1289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a99b493",
+   "id": "8f2bf879",
    "metadata": {},
    "source": [
     "## Train Autoencoder\n",
@@ -1349,12 +1304,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b79bc4a",
+   "id": "4c9939df",
    "metadata": {
     "lines_to_next_cell": 1
    },
    "outputs": [],
    "source": [
+    "# To complete\n",
     "def trainAE(model, train_loader, criterion, optimizer, n_epochs):\n",
     "    \"\"\"\n",
     "    Method used to train an AutoEncoder\n",
@@ -1376,20 +1332,8 @@
     "        model.train()\n",
     "        train_loader.dataset.train()\n",
     "        for i, data in enumerate(train_loader, 0):\n",
-    "            # ToDo\n",
     "            # Complete the training function in a similar way\n",
     "            # than for the CNN classification training.\n",
-    "            # Retrieve mini-batch\n",
-    "            images, labels = data['image'].cuda(), data['label'].cuda()\n",
-    "            # Forward pass + loss computation\n",
-    "            _, outputs = model((images))\n",
-    "            loss = criterion(outputs, images)\n",
-    "            # Back-propagation\n",
-    "            loss.backward()\n",
-    "            # Parameters update\n",
-    "            optimizer.step()\n",
-    "            # Erase previous gradients\n",
-    "            optimizer.zero_grad()\n",
     "\n",
     "        mean_loss = testAE(model, train_loader, criterion)\n",
     "\n",
@@ -1432,7 +1376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef422b4f",
+   "id": "cebce74c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1449,7 +1393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23833254",
+   "id": "92d962f5",
    "metadata": {},
    "source": [
     "## Visualization\n",
@@ -1461,7 +1405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7b07800",
+   "id": "5e45a8f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1496,7 +1440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bc3875e",
+   "id": "3c84ecd4",
    "metadata": {},
    "source": [
     "## Clustering\n",
@@ -1513,7 +1457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99869f1c",
+   "id": "374201b2",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -1545,7 +1489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d83b497f",
+   "id": "8f7eee63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1555,7 +1499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f3bc67d",
+   "id": "12809667",
    "metadata": {},
    "source": [
     "Then the model will fit the training codes and build two clusters. The labels\n",
@@ -1565,7 +1509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02cf64dc",
+   "id": "00a3443c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1582,7 +1526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7f9495e",
+   "id": "8040fc6c",
    "metadata": {},
    "source": [
     "The accuracy may not be very good, this could mean that the framework\n",
@@ -1596,7 +1540,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b83ba0b0",
+   "id": "27edcbbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1621,7 +1565,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "804647bd",
+   "id": "1d210254",
    "metadata": {},
    "source": [
     "You can try to improve this clustering by adding the codes obtained on the\n",
@@ -1633,7 +1577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2a18155",
+   "id": "0c75871e",
    "metadata": {},
    "outputs": [],
    "source": []
