Applying recent changes in main branch

--- a/notebooks/classification.ipynb
+++ b/notebooks/classification.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "33e2d59d",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -16,7 +15,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4eb0883b",
    "metadata": {},
    "source": [
     "# 0. Classification of Alzheimer's disease diagnosis\n",
@@ -31,8 +29,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d08012a5",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
    "outputs": [],
    "source": [
     "import torch\n",
@@ -43,15 +42,11 @@
     "from os import path\n",
     "from torchvision import transforms\n",
     "import random\n",
-    "from copy import deepcopy\n",
-    "import urllib.request\n",
-    "import ssl\n",
-    "import tarfile"
+    "from copy import deepcopy"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "90c586f3",
    "metadata": {},
    "source": [
     "## Database\n",
@@ -71,7 +66,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf7a77c6",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -83,7 +77,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59f5993c",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -94,7 +87,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2bd0708",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -118,7 +110,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9db4003",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -134,7 +125,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96c373f1",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -152,7 +142,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60df8838",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +185,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec6fd062",
    "metadata": {},
    "source": [
     "## Preprocessing\n",
@@ -215,9 +203,9 @@
     "by Clinica and ClinicaDL in order to: \n",
     "\n",
     "1. Convert the original dataset to BIDS format ([`clinica convert\n",
-    "oasis-2-bids`](http://www.clinica.run/doc/Converters/OASIS2BIDS/)).\n",
+    "oasis-2-bids`](https://aramislab.paris.inria.fr/docs/public/latest/Converters/OASIS2BIDS/)).\n",
     "2. Get the non-linear registration and segmentation of grey mater (pipeline\n",
-    "[`t1-volume`](http://www.clinica.run/doc/Pipelines/T1_Volume/)).\n",
+    "[`t1-volume`](https://aramislab.paris.inria.fr/docs/public/latest/Pipelines/T1_Volume/)).\n",
     "3. Obtain the preprocessed images in tensor format ([tensor extraction using ClinicaDL, `clinicadl extract`](https://clinicadl.readthedocs.io/en/stable/Preprocessing/Extract/)).\n",
     "\n",
     "\n",
@@ -230,7 +218,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4779f828",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +275,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d8bf495",
    "metadata": {},
    "source": [
     "To facilitate the training and avoid overfitting due to the limited amount of\n",
@@ -307,7 +293,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dc4d8dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +343,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1138d135",
    "metadata": {},
    "source": [
     "## Visualization\n",
@@ -369,7 +353,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97e155b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +400,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "853882ee",
    "metadata": {},
    "source": [
     "# 1. Cross-validation\n",
@@ -432,7 +414,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24ef3fe0",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -450,7 +431,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4812175e",
    "metadata": {},
    "source": [
     "# 2. Model\n",
@@ -462,7 +442,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14abdfa0",
    "metadata": {},
    "source": [
     "## Reminder on CNN layers\n",
@@ -474,7 +453,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcc2e6ce",
    "metadata": {},
    "source": [
     "### Feature maps\n",
@@ -492,7 +470,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba2c6967",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +488,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b645ba78",
    "metadata": {},
    "source": [
     "### Convolutions (`nn.Conv3d`)\n",
@@ -551,7 +527,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14a7c5c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +540,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6972763",
    "metadata": {},
    "source": [
     "### Batch Normalization (`nn.BatchNorm3d`)\n",
@@ -588,7 +562,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "272f6d72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +573,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccd38e36",
    "metadata": {},
    "source": [
     "### Activation function (`nn.LeakyReLU`)\n",
@@ -617,7 +589,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c178847",
    "metadata": {},
    "source": [
     "### Pooling function (`PadMaxPool3d`)\n",
@@ -641,7 +612,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d6c9faf",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -690,7 +660,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1773cff1",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -707,7 +676,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a68c46c",
    "metadata": {},
    "source": [
     "### Dropout (`nn.Dropout`) \n",
@@ -722,7 +690,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cba70de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +703,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "351dc807",
    "metadata": {},
    "source": [
     "### Fully-Connected Layers (`nn.Linear`)\n",
@@ -752,7 +718,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfa213d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +729,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d94fff06",
    "metadata": {},
    "source": [
     "## Network design\n",
@@ -786,7 +750,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f27b209",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -808,7 +771,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e7cda22",
    "metadata": {},
    "source": [
     "# 3. Train & Test\n",
@@ -835,7 +797,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2850363",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -866,9 +827,10 @@
     "\n",
     "        _, train_metrics = test(model, train_loader, criterion)\n",
     "\n",
-    "        print(f'Epoch %i: loss = %f, balanced accuracy = %f' \n",
-    "              % (epoch, train_metrics['mean_loss'],\n",
-    "                 train_metrics['balanced_accuracy']))\n",
+    "        print(\n",
+    "            f\"Epoch {epoch}: loss = {train_metrics['mean_loss']:.4f}, \"\n",
+    "            f\"balanced accuracy = {train_metrics['balanced_accuracy']:.4f}\"\n",
+    "        )\n",
     "\n",
     "        if train_metrics['mean_loss'] < train_best_loss:\n",
     "            best_model = deepcopy(model)\n",
@@ -948,7 +910,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "091eff70",
    "metadata": {},
    "source": [
     "## Train Classification with Left HC\n",
@@ -972,7 +933,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6c0f165",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,7 +966,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26a31c85",
    "metadata": {},
    "source": [
     "If you obtained about 0.85 or more of balanced accuracy, there may be\n",
@@ -1026,7 +985,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c5e5c61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1037,7 +995,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a2e55f9",
    "metadata": {},
    "source": [
     "If the accuracy on old participants is very different from the one you obtained before,\n",
@@ -1047,7 +1004,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1ef9b0f",
    "metadata": {},
    "source": [
     "## Train Classification with Right HC\n",
@@ -1061,7 +1017,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ac49807",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1092,7 +1047,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16edc2d7",
    "metadata": {},
    "source": [
     "## Soft voting\n",
@@ -1103,7 +1057,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bdf80ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1119,7 +1072,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33319896",
    "metadata": {},
    "source": [
     "Keep in mind that the validation set was used to set the hyperparameters\n",
@@ -1130,7 +1082,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5a2b39d",
    "metadata": {},
    "source": [
     "# 4. Clustering on AD & CN populations\n",
@@ -1146,7 +1097,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5501a1ba",
    "metadata": {},
    "source": [
     "## Model\n",
@@ -1163,7 +1113,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe73669f",
    "metadata": {},
    "source": [
     "You will find below `CropMaxUnpool3d` the transposed version of\n",
@@ -1173,7 +1122,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b9621fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1195,7 +1143,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e59a5a77",
    "metadata": {},
    "source": [
     "To facilitate the reconstruction process, the pooling layers in the encoder\n",
@@ -1209,7 +1156,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d34a318",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1289,7 +1235,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f2bf879",
    "metadata": {},
    "source": [
     "## Train Autoencoder\n",
@@ -1304,7 +1249,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c9939df",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -1337,7 +1281,7 @@
     "\n",
     "        mean_loss = testAE(model, train_loader, criterion)\n",
     "\n",
-    "        print(f'Epoch %i: loss = %f' % (epoch, mean_loss))\n",
+    "        print(f'Epoch {epoch}: loss = {mean_loss:.6f}')\n",
     "\n",
     "        if mean_loss < train_best_loss:\n",
     "            best_model = deepcopy(model)\n",
@@ -1376,11 +1320,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cebce74c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "learning_rate = 10**-2\n",
+    "learning_rate = 10**-4\n",
     "n_epochs = 30\n",
     "batch_size = 4\n",
     "\n",
@@ -1393,7 +1336,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92d962f5",
    "metadata": {},
    "source": [
     "## Visualization\n",
@@ -1405,7 +1347,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e45a8f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1440,7 +1381,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c84ecd4",
    "metadata": {},
    "source": [
     "## Clustering\n",
@@ -1457,7 +1397,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "374201b2",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -1489,7 +1428,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f7eee63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1499,7 +1437,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12809667",
    "metadata": {},
    "source": [
     "Then the model will fit the training codes and build two clusters. The labels\n",
@@ -1509,11 +1446,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00a3443c",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import mixture\n",
+    "from sklearn.metrics import adjusted_rand_score\n",
     "\n",
     "n_components = 2\n",
     "model = mixture.GaussianMixture(n_components)\n",
@@ -1521,15 +1458,15 @@
     "train_predict = model.predict(train_codes)\n",
     "\n",
     "metrics = compute_metrics(train_labels, train_predict)\n",
-    "print(metrics)"
+    "ari = adjusted_rand_score(train_labels, train_predict)\n",
+    "print(f\"Adjusted random index: {ari}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8040fc6c",
    "metadata": {},
    "source": [
-    "The accuracy may not be very good, this could mean that the framework\n",
+    "The adjusted random index may not be very good, this could mean that the framework\n",
     "clustered another characteristic that the one you tried to target.\n",
     "\n",
     "What is actually expected is that the clustering differenciation is made on\n",
@@ -1540,7 +1477,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27edcbbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1565,7 +1501,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d210254",
    "metadata": {},
    "source": [
     "You can try to improve this clustering by adding the codes obtained on the\n",
@@ -1577,7 +1512,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c75871e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1594,5 +1528,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 4
 }
