--- a/notebooks/GAN.ipynb
+++ b/notebooks/GAN.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8360b4cb",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -16,7 +15,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0484830b",
    "metadata": {},
    "source": [
     "In this lab we will focus on **image synthesis**, in particular to\n",
@@ -42,7 +40,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd1af3f1",
    "metadata": {},
    "source": [
     "# 0. Fetching the dataset\n",
@@ -60,7 +57,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "703cf9cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +66,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "640d9cef",
    "metadata": {},
    "source": [
     "The dataset used in this lab is composed of preprocessed images from the\n",
@@ -89,7 +84,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5601c8cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +113,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1e00e2e",
    "metadata": {},
    "source": [
     "Let's import all the necessary packages."
@@ -128,7 +121,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e570f9ce",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -161,7 +153,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b1cc2a7",
    "metadata": {},
    "source": [
     "Let's create a custom `IXIDataset` class to easily have access to the data.\n",
@@ -173,7 +164,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1001c5cf",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -228,7 +218,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13c6a3fd",
    "metadata": {},
    "source": [
     "Using this class and the `DataLoader` class from `torch.utils.data`, you can\n",
@@ -252,7 +241,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b027119",
    "metadata": {},
    "source": [
     "# 1. Generator\n",
@@ -273,17 +261,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fc6c9be",
    "metadata": {},
    "source": [
-    "<a href=\"https://ibb.co/QXBDNy3\">\n",
-    "    <img src=\"https://i.ibb.co/g614TkL/Capture-d-cran-2020-03-02-16-04-06.png\" width=\"800\" border=\"0\">\n",
+    "<a href=\"https://ibb.co/pnTXXrB\">\n",
+    "  <img src=\"https://i.ibb.co/V3GBBpc/generator-architecture.png\" width=\"800\" border=\"0\">\n",
     "</a>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e5b2fcae",
    "metadata": {},
    "source": [
     "\n",
@@ -296,7 +282,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7837569",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -374,7 +359,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4740309a",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -414,7 +398,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66adfeda",
    "metadata": {},
    "source": [
     "Let's have a look at the architecture of our generator:"
@@ -423,7 +406,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0b078bd",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -435,7 +417,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b1ceb6f",
    "metadata": {},
    "source": [
     "## 1.2 Train the generator\n",
@@ -463,7 +444,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e3f3eb4",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
@@ -475,7 +455,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fed4771c",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -590,7 +569,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28c4443c",
    "metadata": {
     "tags": [
      "remove_output"
@@ -623,7 +601,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef60b771",
    "metadata": {},
    "source": [
     "## 1.3 Evaluate the generator\n",
@@ -634,7 +611,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8960e253",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -649,7 +625,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "901efe20",
    "metadata": {},
    "source": [
     "After doing visual quality control, it is a good idea to quantify the quality\n",
@@ -690,7 +665,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1b65497",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -748,7 +722,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "819dfbb8",
    "metadata": {},
    "source": [
     "We will now evaluate the generator with these three metrics on both the\n",
@@ -758,7 +731,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f94c1a4",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -814,7 +786,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a62c9f9b",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -825,7 +796,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8d533d7",
    "metadata": {},
    "source": [
     "The performance is already really good! The task may be pretty easy.\n",
@@ -835,7 +805,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe032197",
    "metadata": {},
    "source": [
     "# 2. Conditional Generative Adversarial Network (cGAN)\n",
@@ -860,7 +829,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c2243d4",
    "metadata": {},
    "source": [
     "## 2.1 Architecture of the cGAN\n",
@@ -889,7 +857,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a51f61e3",
    "metadata": {},
    "source": [
     "<a href=\"https://ibb.co/9b2jF0V\">\n",
@@ -899,7 +866,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f99943c0",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
@@ -911,7 +877,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f4045a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,7 +908,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c35aad13",
    "metadata": {},
    "source": [
     "Let's have a look at the architecture of our discriminator:"
@@ -952,7 +916,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "308552e9",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -964,7 +927,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73adccac",
    "metadata": {},
    "source": [
     "## 2.2 Training our conditional GAN\n",
@@ -1030,7 +992,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0692c84",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
@@ -1042,7 +1003,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad34ff39",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -1203,7 +1163,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3734d60a",
    "metadata": {
     "tags": [
      "remove_output"
@@ -1217,7 +1176,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c2c38d0",
    "metadata": {},
    "source": [
     "## 2.3 Evaluating the generator of our cGAN\n",
@@ -1228,7 +1186,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58a426f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1241,7 +1198,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c0316b3",
    "metadata": {},
    "source": [
     "We will now evaluate the generator of the cGAN with the same three metrics\n",
@@ -1252,7 +1208,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e52fc732",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -1263,7 +1218,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ac65965",
    "metadata": {},
    "source": [
     "The performance is slightly lower for the cGAN, which is a bit disappointing.\n",
@@ -1277,7 +1231,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ae41c6d",
    "metadata": {},
    "source": [
     "# 3. CycleGAN\n",
@@ -1303,7 +1256,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33ffda14",
    "metadata": {},
    "source": [
     "<a href=\"https://ibb.co/WtS49wR\">\n",
@@ -1313,7 +1265,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e10ec58",
    "metadata": {},
    "source": [
     "## 3.1 Architecture of the CycleGAN\n",
@@ -1328,7 +1279,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e83d1ab6",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -1352,7 +1302,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0738e8ec",
    "metadata": {},
    "source": [
     "Let's have a look at the architecture of one discriminator in our CycleGAN:"
@@ -1361,7 +1310,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03b81914",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -1373,7 +1321,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b777985a",
    "metadata": {},
    "source": [
     "## 3.2 Training the CycleGAN\n",
@@ -1410,7 +1357,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d689909",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
@@ -1422,7 +1368,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dacac100",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -1629,7 +1574,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b79d6f6f",
    "metadata": {
     "tags": [
      "remove_output"
@@ -1645,7 +1589,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12506239",
    "metadata": {},
    "source": [
     "## 3.3 Evaluating the generator of our CycleGAN\n",
@@ -1656,7 +1599,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e470297",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1669,7 +1611,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eea51d42",
    "metadata": {},
    "source": [
     "We will now evaluate the generator of the CycleGAN with the same three\n",
@@ -1680,7 +1621,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a59e1b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1689,7 +1629,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02aab0b5",
    "metadata": {},
    "source": [
     "You should obtain a lower performance for the CycleGAN, which is not so\n",
@@ -1705,7 +1644,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beee59c6",
    "metadata": {},
    "source": [
     "<a href=\"https://ibb.co/Q8FrRrd\">\n",
@@ -1725,5 +1663,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 4
 }
