Update the images of the architectures of the generator and discriminator

--- a/notebooks/GAN.ipynb
+++ b/notebooks/GAN.ipynb
@@ -263,9 +263,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a href=\"https://ibb.co/pnTXXrB\">\n",
-    "  <img src=\"https://i.ibb.co/V3GBBpc/generator-architecture.png\" width=\"800\" border=\"0\">\n",
-    "</a>"
+    "https://colab.research.google.com/drive/1br85sGD9zPip0WHn0esAKpXFNLJYDTMJ#scrollTo=Ps5kxeKxig-D"
    ]
   },
   {
@@ -859,9 +857,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a href=\"https://ibb.co/9b2jF0V\">\n",
-    "  <img src=\"https://i.ibb.co/hBHvPNZ/Capture-d-cran-2020-03-02-16-04-14.png\" width=\"800\"  border=\"0\">\n",
-    "</a>"
+    "![Architecture of the discriminators](https://drive.google.com/uc?id=19dzdj0aR--tGVl6CqGTl_ZF5IfFiqcP3)"
    ]
   },
   {
