--- a/notebooks/GAN.ipynb
+++ b/notebooks/GAN.ipynb
@@ -263,7 +263,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://colab.research.google.com/drive/1br85sGD9zPip0WHn0esAKpXFNLJYDTMJ#scrollTo=Ps5kxeKxig-D"
+    "![Architecture of the generator](https://drive.google.com/uc?id=14WfeMGLKrLC4XS90YeXRpiDK67NT91FU) "
    ]
   },
   {
